# AAQ-backend

./: .env.example  .pre-commit-config.yaml  README.md  data-transformation.md  justfile  pyproject.toml  requirements.txt
app/: main.py
app/api/: router.py
app/core/activities/: models.py  router.py  service.py
app/core/agents/: policy.py  reward.py  state.py
app/core/goal/: models.py  router.py  service.py
app/core/market_intelligence/: models.py  router.py  service.py
app/core/model_config/: router.py
app/core/n8n/: models.py  router.py  schemas.py  service.py
app/core/news/: models.py  router.py  schemas.py  service.py
app/core/performance/: models.py  router.py  service.py
app/core/shared/: config.py  database.py  logging.py
app/core/signal_bridge/: models.py  router.py  service.py
app/core/strategy/: models.py  router.py  schemas.py  service.py  trading_strategy.py
app/core/tradingagents/: __init__.py  default_config.py
app/core/tradingagents/agents/utils/: technical_indicators_tools.py
app/core/tradingagents/dataflows/data_cache/: 1810.HK-YFin-data-2011-02-10-2026-02-10.csv  GOOGL-YFin-data-2011-02-11-2026-02-11.csv  MSFT-YFin-data-2011-02-11-2026-02-11.csv  NVDA-YFin-data-2011-02-11-2026-02-11.csv
app/core/tradingagents/graph/: __init__.py  setup.py  timing_callback.py  trading_graph.py
app/core/tradingagents/llm_clients/: google_client.py
app/core/user/: models.py  router.py  schemas.py  service.py
eval_results/GOOGL/TradingAgentsStrategy_logs/: full_states_log_2026-02-11.json
eval_results/MSFT/TradingAgentsStrategy_logs/: full_states_log_2026-02-11.json
eval_results/NVDA/TradingAgentsStrategy_logs/: full_states_log_2026-02-11.json
tests/: run_trading_strategy_with_mock_marketSignal.py  test_market_signal_endpoint.py  test_n8n.py  test_news.py  test_timing_callback.py
