[project]
name = "AAQ-backend"
version = "0.1.0"
description = "AI-Augmented Quantitative Investment Backend"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "fastapi>=0.110.0",
  "httpx>=0.25.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.1",
  "psycopg2-binary>=2.9.9",
  "uvicorn[standard]>=0.27.1",
  "typing-extensions>=4.15.0",
  "langchain-core>=1.2.10",
  "langchain-openai>=1.1.8",
  "langchain-experimental>=0.4.1",
  "pandas>=2.3.3",
  "yfinance>=1.1.0",
  "stockstats>=0.6.7",
  "langgraph>=1.0.8",
  "rank-bm25>=0.2.2",
  "setuptools>=82.0.0",
  "backtrader>=1.9.78.123",
  "parsel>=1.11.0",
  "requests>=2.32.5",
  "tqdm>=4.67.3",
  "pytz>=2025.2",
  "redis>=7.1.1",
  "chainlit>=2.9.6",
  "rich>=14.3.2",
  "typer>=0.21.1",
  "questionary>=2.1.1",
  "langchain-anthropic>=1.3.2",
  "langchain-google-genai>=4.2.0",
  "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=3.7.0",
  "pytest>=8.0.0",
  "ruff>=0.4.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
